API - Fix profiles
